sửa login, xoá tenant,  cập nhật noti và news. thêm target